--- a/mailer/Makefile
+++ b/mailer/Makefile
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-DOCKER_BE = symfony-api-platform-be
+DOCKER_BE = symfony-api-platform-mailer
 OS := $(shell uname)
 
 ifeq ($(OS),Darwin)
@@ -50,8 +50,3 @@ ssh-be: ## ssh's into the be container
 code-style: ## Runs php-cs to fix code styling following Symfony rules
 	U_ID=${UID} docker exec -it --user ${UID} ${DOCKER_BE} php-cs-fixer fix src --rules=@Symfony
 	U_ID=${UID} docker exec -it --user ${UID} ${DOCKER_BE} php-cs-fixer fix tests --rules=@Symfony
-
-generate-ssh-keys: ## Generates SSH keys for the JWT library
-	U_ID=${UID} docker exec -it --user ${UID} ${DOCKER_BE} mkdir -p config/jwt
-	U_ID=${UID} docker exec -it --user ${UID} ${DOCKER_BE} openssl genrsa -passout pass:767b453a97ac019714eb7ccbce781d16 -out config/jwt/private.pem -aes256 4096
-	U_ID=${UID} docker exec -it --user ${UID} ${DOCKER_BE} openssl rsa -pubout -passin pass:767b453a97ac019714eb7ccbce781d16 -in config/jwt/private.pem -out config/jwt/public.pem
