--- a/mailer/docker-compose.yml
+++ b/mailer/docker-compose.yml
@@ -1,23 +1,8 @@
 version: '3.5'
 
 services:
-  symfony-api-platform-web:
-    container_name: symfony-api-platform-web
-    build:
-      context: ./docker/nginx
-      args:
-        UID: $U_ID
-    ports:
-      - 250:80
-    volumes:
-      - ./public:/appdata/www/public
-    depends_on:
-      - symfony-api-platform-be
-    networks:
-      - symfony-api-platform-network
-
-  symfony-api-platform-be:
-    container_name: symfony-api-platform-be
+  symfony-api-platform-mailer:
+    container_name: symfony-api-platform-mailer
     build:
       context: docker/php
       args:
@@ -33,28 +18,46 @@ services:
       - ./docker/php/xdebug-macos.ini:/usr/local/etc/php/conf.d/xdebug.ini #MacOS users
       - ~/.ssh/id_rsa:/home/appuser/.ssh/id_rsa
     depends_on:
-      - symfony-api-platform-db
+      - symfony-api-platform-mailer-db
     networks:
       - symfony-api-platform-network
 
-  symfony-api-platform-db:
-    container_name: symfony-api-platform-db
+  symfony-api-platform-mailer-db:
+    container_name: symfony-api-platform-mailer-db
     image: mysql:8.0
     ports:
-      - 36000:3306
+      - 36100:3306
     environment:
-      MYSQL_DATABASE: symfony_db
+      MYSQL_DATABASE: symfony_mailer_db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
       MYSQL_ROOT_PASSWORD: root
     command: mysqld --sql_mode="STRICT_ALL_TABLES,NO_ENGINE_SUBSTITUTION"
     volumes:
-      - symfony-api-platform-db-data:/var/lib/mysql
+      - symfony-api-platform-mailer-db-data:/var/lib/mysql
     networks:
       - symfony-api-platform-network
 
+###> doctrine/doctrine-bundle ###
+  database:
+    image: postgres:${POSTGRES_VERSION:-13}-alpine
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-app}
+      # You should definitely change the password in production
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-ChangeMe}
+      POSTGRES_USER: ${POSTGRES_USER:-symfony}
+    volumes:
+      - db-data:/var/lib/postgresql/data:rw
+      # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
+      # - ./docker/db/data:/var/lib/postgresql/data:rw
+###< doctrine/doctrine-bundle ###
+
 volumes:
-  symfony-api-platform-db-data:
+
+###> doctrine/doctrine-bundle ###
+  db-data:
+###< doctrine/doctrine-bundle ###
+  symfony-api-platform-mailer-db-data:
 
 networks:
   symfony-api-platform-network:
