--- a/mailer/.env
+++ b/mailer/.env
@@ -33,3 +33,8 @@ APP_SECRET=639b49bce25659c22f1bb47a771969a7
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://symfony-api-platform-mailcatcher:1025
+MAILER_DEFAULT_SENDER=info@api.com
+###< symfony/mailer ###
