--- a/mailer/.env
+++ b/mailer/.env
@@ -20,21 +20,21 @@ APP_SECRET=639b49bce25659c22f1bb47a771969a7
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=amqp://symfony:password@symfony-api-platform-rabbitmq:5672/%2f
+MESSENGER_EXCHANGE=symfony_exchange
+MESSENGER_VHOST=symfony_vhost
 ###< symfony/messenger ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=mysql://root:root@symfony-api-platform-mailer-db:3306/symfony_mailer_db?serverVersion=8.0
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://symfony-api-platform-mailcatcher:1025
 MAILER_DEFAULT_SENDER=info@api.com
+###< symfony/mailer ###
+
+
+###> Client params ###
+HOST=https://localhost:3000
 ###< symfony/mailer ###
