--- a/mailer/docker-compose.yml
+++ b/mailer/docker-compose.yml
@@ -10,12 +10,12 @@ services:
         environment:
             PHP_IDE_CONFIG: serverName=Docker
             PHP_XDEBUG_ENABLED: 1
-            #XDEBUG_CONFIG: remote_host=172.17.0.1 remote_port=9005 # Linux users
-            XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9005 # MacOS users
+            XDEBUG_CLIENT_HOST: host.docker.internal
+            XDEBUG_CLIENT_PORT: 9003
         volumes:
             - ./:/appdata/www
             #   - ./docker/php/xdebug-linux.ini:/usr/local/etc/php/conf.d/xdebug.ini # Linux users
-            - ./docker/php/xdebug-macos.ini:/usr/local/etc/php/conf.d/xdebug.ini #MacOS users
+            - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini #MacOS users
             - ~/.ssh/id_rsa:/home/appuser/.ssh/id_rsa
         depends_on:
             - symfony-api-platform-mailer-db
