--- a/api/config/api_platform/resources/User.yaml
+++ b/api/config/api_platform/resources/User.yaml
@@ -11,5 +11,30 @@ App\Entity\User:
         groups: [user_post]
       openapi_context:
         summary: Register a new user
+    resend_activation_email:
+      method: POST
+      path: /users/resend_activation_email
+      controller: App\Api\Action\User\ResendActivationEmail
+      openapi_context:
+        summary: Send activation email to inactive user
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    type: string
+                    required: true
+        responses:
+          200:
+            description: OK
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
   itemOperations:
     get:
