Servicio reenvio email de activacion terminado

--- a/api/config/api_platform/resources/User.yaml
+++ b/api/config/api_platform/resources/User.yaml
@@ -15,6 +15,7 @@ App\Entity\User:
       method: POST
       path: /users/resend_activation_email
       controller: App\Api\Action\User\ResendActivationEmail
+      deserialize: false
       openapi_context:
         summary: Send activation email to inactive user
         requestBody:
