Configuracion servicio Mailer para recibir el mensaje. Se prueba caso de error de mensaje y reintento de envio

--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -23,6 +23,10 @@ security:
             pattern: ^/api/v1/
             methods: [GET]
             security: false
+        request_reset_password:
+            pattern: ^/api/v1/users/request_reset_password
+            methods: [POST]
+            security: false
         login:
             pattern: ^/api/v1/users/login
             stateless: true
