--- a/api/composer.json
+++ b/api/composer.json
@@ -83,6 +83,8 @@
         }
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.9",
+        "liip/test-fixtures-bundle": "^2.0.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
