--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
             methods: [POST]
             security: false
         docs:
-            pattern: ^/api/v1/
+            pattern: ^/api/v1/docs
             methods: [GET]
             security: false
         request_reset_password:
@@ -32,7 +32,7 @@ security:
             methods: [POST]
             security: false
         login:
-            pattern: ^/api/v1/users/login
+            pattern: /api/v1/users/login
             stateless: true
             provider: user_provider
             json_login:
