Test de endpoint cambio de contraseña y cambios en el mismo endpoint para enviar el id en la url

--- a/api/config/api_platform/resources/User.yaml
+++ b/api/config/api_platform/resources/User.yaml
@@ -88,38 +88,6 @@ App\Entity\User:
                   properties:
                     message:
                       type: string
-    reset_password_token:
-      method: POST
-      path: /users/reset_password
-      controller: App\Api\Action\User\ResetPassword
-      deserialize: false
-      openapi_context:
-        summary: Reset user password
-        requestBody:
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  userId:
-                    type: string
-                    required: true
-                  resetPasswordToken:
-                    type: string
-                    required: true
-                  password:
-                    type: string
-                    required: true
-        responses:
-          200:
-            description: OK
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    User:
-                      type: object
     change_password:
       method: POST
       path: /users/change_password
@@ -151,3 +119,28 @@ App\Entity\User:
         groups: [user_activate]
       openapi_context:
         summary: Activates a user
+    reset_password:
+      method: PUT
+      path: /users/{id}/reset_password
+      controller: App\Api\Action\User\ResetPassword
+      deserialize: false
+      openapi_context:
+        summary: Reset user password
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  resetPasswordToken:
+                    type: string
+                    required: true
+                  password:
+                    type: string
+                    required: true
+        response:
+          200:
+            description: OK
+            content:
+              application/ld+json:
+                $ref: '#/components/schemas/User.jsonld-user_read'
