Test change password terminado

--- a/api/config/api_platform/resources/User.yaml
+++ b/api/config/api_platform/resources/User.yaml
@@ -88,25 +88,6 @@ App\Entity\User:
                   properties:
                     message:
                       type: string
-    change_password:
-      method: POST
-      path: /users/change_password
-      controller: App\Api\Action\User\ChangePassword
-      deserialize: false
-      openapi_context:
-        summary: Changes user password
-        requestBody:
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  oldPassword:
-                    type: string
-                    required: true
-                  newPassword:
-                    type: string
-                    required: true
   itemOperations:
     get:
       method: GET
@@ -144,3 +125,22 @@ App\Entity\User:
             content:
               application/ld+json:
                 $ref: '#/components/schemas/User.jsonld-user_read'
+    change_password:
+      method: PUT
+      path: /users/{id}/change_password
+      controller: App\Api\Action\User\ChangePassword
+      deserialize: false
+      openapi_context:
+        summary: Changes user password
+        requestBody:
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  oldPassword:
+                    type: string
+                    required: true
+                  newPassword:
+                    type: string
+                    required: true
