--- a/api/composer.json
+++ b/api/composer.json
@@ -16,6 +16,9 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.10",
+        "league/flysystem-aws-s3-v3": "^2.1",
+        "league/flysystem-bundle": "^2.0",
+        "league/flysystem-memory": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.13",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
@@ -26,6 +29,7 @@
         "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/property-access": "5.3.*",
         "symfony/property-info": "5.3.*",
