Configuracion servicios para subir el avatar y guardarlo en el space

--- a/api/config/packages/flysystem.yaml
+++ b/api/config/packages/flysystem.yaml
@@ -1,7 +1,8 @@
-# Read the documentation at https://github.com/thephpleague/flysystem-bundle/blob/master/docs/1-getting-started.md
 flysystem:
     storages:
         default.storage:
-            adapter: 'local'
+            adapter: 'aws'
             options:
-                directory: '%kernel.project_dir%/var/storage/default'
+                client: 'app.images.s3'
+                bucket: '%env(resolve:BUCKET)%'
+                prefix: '%env(resolve:PREFIX)%'
