Instalacion de la libreria y configuracion para usar el login de facebook

--- a/api/.env
+++ b/api/.env
@@ -34,3 +34,9 @@ BUCKET=symfony-api-platform
 PREFIX=
 SUBDOMAIN=https://symfony-api-platform.ams3.digitaloceanspaces.com
 ###< Digital Ocean parameters ###
+
+###> Social Login ###
+FACEBOOK_CLIENT=404160554646741
+FACEBOOK_SECRET=''
+FACEBOOK_GRAPH_VERSION=V12.0
+###< Social Login ###
