--- a/api/composer.json
+++ b/api/composer.json
@@ -16,6 +16,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.10",
+        "facebook/graph-sdk": "^5.7",
         "league/flysystem-aws-s3-v3": "^2.1",
         "league/flysystem-bundle": "^2.0",
         "league/flysystem-memory": "^2.0",
