--- a/api/composer.json
+++ b/api/composer.json
@@ -95,5 +95,11 @@
         "symfony/css-selector": "5.3.*",
         "symfony/maker-bundle": "^1.34",
         "symfony/phpunit-bridge": "^5.3"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/theofidry/AliceBundle"
+        }
+    ]
 }
