- Se crea repositorio para group request - Se crea la clase para el mensaje de rabbit y se actualiza la configuracion - Se crean las excepciones y se añade logica del servicio - Se actualiza API Platform y se prueba la accion - Se testea la accion de enviar la solicitud de grupo

--- a/api/config/packages/messenger.yaml
+++ b/api/config/packages/messenger.yaml
@@ -17,6 +17,18 @@ framework:
                         user_queue:
                             binding_keys: [user_queue]
                     auto_setup: true
+            amqp_group:
+                dsn: '%env(string:MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    vhost: '%env(string:MESSENGER_VHOST)%'
+                    exchange:
+                        name: '%env(string:MESSENGER_EXCHANGE)%'
+                        type: direct
+                    queues:
+                        group_queue:
+                            binding_keys: [group_queue]
+                    auto_setup: true
         routing:
             'App\Messenger\Message\UserRegisteredMessage': amqp_user
             'App\Messenger\Message\RequestResetPasswordMessage': amqp_user
+            'App\Messenger\Message\GroupRequestMessage': amqp_group
