Archivos pendientes de subir

--- a/api/.env
+++ b/api/.env
@@ -32,7 +32,7 @@ KEY=
 SECRET=
 BUCKET=symfony-api-platform
 PREFIX=
-SUBDOMAIN=https://symfony-api-platform.ams3.digitaloceanspaces.com
+SUBDOMAIN=https://symfony-api-platform.ams3.digitaloceanspaces.com/
 ###< Digital Ocean parameters ###
 
 ###> Social Login ###
