--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -44,6 +44,10 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
                 require_previous_session: false
+        activate:
+            pattern: ^/api/v1/users/.*/activate
+            methods: [PUT]
+            security: false
         facebook_auth:
             pattern: ^/api/v1/users/facebook/auth
             methods: [POST]
