--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -63,6 +63,9 @@ services:
         tags: [ 'api_platform.filter' ]
     ### Api Platform filters ###
 
+    App\Swagger\Decorator\ApiNormalizer:
+        decorates: 'api_platform.jsonld.normalizer.item'
+
     _instanceof:
         App\Api\Listener\PreWriteListener\PreWriteListener:
             tags:
