--- a/api/config/api_platform/serialization/User.yaml
+++ b/api/config/api_platform/serialization/User.yaml
@@ -14,6 +14,14 @@ App\Entity\User:
       groups: [user_read]
     token:
       groups: [user_activate]
+    companyName:
+      groups: [user_read, user_register, user_update]
+    phoneNumber:
+      groups: [user_read, user_register, user_update]
+    companyWeb:
+      groups: [user_read, user_register, user_update]
+    userType:
+      groups: [user_read, user_register, user_update]
     createdAt:
       groups: [user_read]
     updatedAt:
@@ -23,4 +31,6 @@ App\Entity\User:
     categories:
       groups: [user_read]
     movements:
+      groups: [user_read]
+    contactRequests:
       groups: [user_read]
